sideNav / Mobile / serachbar / header

--- a/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.scss
+++ b/src/app/add-channel-dialog/add-user-to-channel-dialog/add-user-to-channel-dialog.component.scss
@@ -1,6 +1,6 @@
 .addUserToChannelContainer {
     width: 642px;
-    height: 279px;
+    padding-bottom: 12px;
 }
 
 ::ng-deep .mat-mdc-dialog-container {
