--- a/src/app/mainscreen/searchbar/searchbar.component.scss
+++ b/src/app/mainscreen/searchbar/searchbar.component.scss
@@ -6,22 +6,22 @@
     #searchfield {
         position: relative;
         margin: 0;
-        padding: 0px 12px;
+        padding: 0px 0px 0px 24px;
 
-        height: 70px;
+        height: 60px;
         width: calc(100% - 24px);
         font-size: 20px;
         display: flex;
 
         border: 1px solid #ADB0D9;
-        border-radius: 30px;
+        border-radius: 42px;
 
     }
 
     #searchfield-icon {
         position: absolute;
-        top: 20px;
-        height: 30px;
+        top: 18px;
+        height: 24px;
         right: 18px;
         width: 35px;
     }
@@ -62,7 +62,7 @@
     }
 
     #searchfield-icon {
-        top: 12px !important;
+        top: 18px !important;
         width: 24px !important;
     }
 }
@@ -71,6 +71,13 @@
     border: solid 1px #ADB0D9;
     border-radius: 30px;
     padding: 8px;
+}
+
+
+.header{
+    input{
+        border: solid 0px #ADB0D9 !important; 
+    }
 }
 
 
