--- a/src/app/mainscreen/sidenav/sidenav.component.html
+++ b/src/app/mainscreen/sidenav/sidenav.component.html
@@ -4,7 +4,7 @@
     <div class="sidenavHeader">
         <img src="/assets/img/logo/codeLearningLogo.png">
         <h3>Code learning</h3>
-        <button mat-icon-button class="editSquare">
+        <button mat-icon-button class="editSquare" (click)="openNewChatOrChannel()">
             <mat-icon>
                 <img src="/assets/img/icons/editSquare.png">
             </mat-icon>
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <div class="addChannel">
+            <div class="addChannel" (click)="openDialog()">
                 <img class="pad-right17" src="/assets/img/icons/add_circle.png">
                 Channel hinzufügen
             </div>
