--- a/src/app/mainscreen/mainscreen.component.scss
+++ b/src/app/mainscreen/mainscreen.component.scss
@@ -89,7 +89,7 @@ app-channel, app-chat, app-empty-window {
         
         #main-body-mobile{
             display: block;
-            height: 100%;
+            height: calc(100% - 110px);
         }
     }
 
