--- a/src/app/mainscreen/message/thread/thread.component.scss
+++ b/src/app/mainscreen/message/thread/thread.component.scss
@@ -11,7 +11,6 @@
     padding: 0;
 }
 
-
 #thread {
     height: 100%;
     flex-grow: 1;
@@ -22,7 +21,7 @@
 
     .header {
         box-shadow: rgba(0, 0, 0, 0.8) 0 2px 23px -10px;
-        padding: 0px 35px 0px 35px;
+        padding: 36px 45px;
         border-radius: 30px 30px 0 0;
         display: flex;
         justify-content: space-between;
@@ -31,6 +30,9 @@
             display: flex;
             align-items: center;
             gap: 32px;
+        }
+        h2{
+            margin: 0px;
         }
     }
 
