implemented a notification component

--- a/src/app/mainscreen/mainscreen.component.html
+++ b/src/app/mainscreen/mainscreen.component.html
@@ -84,3 +84,9 @@
 <div *ngIf="userProfilOpen">
     <app-user-profil [user]="userProfilUser"></app-user-profil>
 </div>
+
+<app-notification 
+[text]="'Mitteilung'"
+[type]="'default'"
+[animation]="'shift-right-in'" >
+</app-notification>
