--- a/src/app/notification/notification.component.scss
+++ b/src/app/notification/notification.component.scss
@@ -1,5 +1,5 @@
 .message-container {
-    position: absolute;
+    position: static;
     top: 0;
     left: 0;
     width: 100%;
@@ -123,25 +123,24 @@
             left: 110%;
         }
     }
-}
 
+    //Types of Messages
+    .error {
+        background-color: rgb(255, 66, 66);
+        color: white;
+    }
 
-//Types of Messages
-.error {
-    background-color: rgb(255, 66, 66);
-    color: white;
-}
+    .success {
+        background-color: #4f9d00;
+        border: solid 1px #00d84f;
+        color: white;
+    }
 
-.success {
-    background-color: #4f9d00;
-    border: solid 1px #00d84f;
-    color: white;
-}
-
-.default {
-    background-color: #444DF2;
-    border-radius: 30px 30px 0px 30px;
-    padding: 25px;
-    border: none;
-    color: white;
+    .default {
+        background-color: #444DF2;
+        border-radius: 30px 30px 0px 30px;
+        padding: 25px;
+        border: none;
+        color: white;
+    }
 }
