--- a/src/app/mainscreen/message/message-edit/message-edit.component.scss
+++ b/src/app/mainscreen/message/message-edit/message-edit.component.scss
@@ -7,6 +7,32 @@
     padding: 20px;
     min-height: 100px;
 
+
+    .preview-file {
+        display: flex;
+        max-height: 60px;
+        max-width: 60px;
+        object-fit: cover;
+        align-items: flex-end;
+    
+        img {
+            border-radius: 30%;
+            width: 60px;
+            height: 60px;
+        }
+    }
+
+    .close-red-icon {
+        
+        display: flex;
+        position: relative;
+        height: 20px !important;
+        top: -40px;
+        cursor: pointer;
+    }
+    
+    
+
     .options {
         z-index: 9;
         position: absolute;
