--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,4 +102,141 @@ button{
     margin-top: 10px;
   }
 
+
+
+.notification-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    pointer-events: none;
+
+    .notification-card {
+        z-index: 99;
+        position: relative;
+        top: 70%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        width: fit-content;
+        opacity: 0;
+
+        .notification-card-content {
+            font-weight: 500;
+            font-size: 24px;
+        }
+    }
+
+
+
+    //Available animation types
+    @keyframes shift-left-in {
+        0% {
+            opacity: 0;
+            left: -10%;
+        }
+
+        5% {
+            opacity: 1;
+        }
+
+        30% {
+            top: 70%;
+            left: 50%
+        }
+
+        70% {
+            top: 70%;
+            left: 50%
+        }
+
+        95% {
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 0;
+            left: -10%;
+        }
+    }
+
+    @keyframes shift-up {
+        0% {
+            opacity: 0;
+            top: 110%;
+        }
+
+        5% {
+            opacity: 1;
+        }
+
+        30% {
+            top: 70%;
+        }
+
+        70% {
+            top: 70%;
+        }
+
+        95% {
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 0;
+            top: 110%;
+        }
+    }
+
+    @keyframes shift-right-in {
+        0% {
+            opacity: 0;
+            left: 110%;
+        }
+
+        5% {
+            opacity: 1;
+        }
+
+        30% {
+            top: 70%;
+            left: 50%
+        }
+
+        70% {
+            top: 70%;
+            left: 50%
+        }
+
+        95% {
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 0;
+            left: 110%;
+        }
+    }
+    
+
+    //Types of Messages
+    .error {
+        background-color: rgb(255, 66, 66);
+        color: white;
+    }
+
+    .success {
+        background-color: #4f9d00;
+        border: solid 1px #00d84f;
+        color: white;
+    }
+
+    .default {
+        background-color: #444DF2;
+        border-radius: 30px 30px 0px 30px;
+        padding: 25px;
+        border: none;
+        color: white;
+    }
+}
   
