--- a/src/app/mainscreen/sidenav/chat-view/chat-view.component.html
+++ b/src/app/mainscreen/sidenav/chat-view/chat-view.component.html
@@ -9,5 +9,8 @@
             [matTooltipShowDelay]="500">
         </div>
     </div>
-    <b>{{user.fullName}}</b>
+    <div id="header-user-name">
+        <b>{{user.fullName}}</b>
+        <b *ngIf="user.id == userFirebaseService.currentUser.id">&nbsp;(Du)</b>
+    </div>
 </div>
