--- a/src/app/mainscreen/chat/chat.component.html
+++ b/src/app/mainscreen/chat/chat.component.html
@@ -2,7 +2,7 @@
     <div class='header'>
         <div class="header-title" width="fit-content">
             <div id="header-title-chatpartner-name" (click)="openProfil()">
-                <h2> {{ chatPartner.fullName }}</h2>
+                <h2>#{{formatService.cutStrLen(chatPartner.fullName)}}</h2>
                 <h2 *ngIf="chatPartner.id == userFirebaseService.currentUser.id">&nbsp;(Du)</h2>
             </div>
         </div>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="user-text">
                     <div *ngIf="chatPartner.id != userFirebaseService.currentUser.id">
-                        Diese Unterhaltung findet nur zwischen <a (click)="openProfil()">@{{ chatPartner.fullName }}</a> und dir statt.
+                        Diese Unterhaltung findet nur zwischen <a (click)="openProfil()">@ {{formatService.cutStrLen(chatPartner.fullName)}}</a> und dir statt.
                     </div>
                     <div *ngIf="chatPartner.id == userFirebaseService.currentUser.id">
                         Dieser Raum ist nur für dich da. Mache dir Notizen, liste deine To-dos auf oder bewahre Links und Dateien griffbereit auf. Du kannst hier auch gerne Dinge mit dir selbst besprechen.
