--- a/src/app/mainscreen/sidenav/sidenav.component.html
+++ b/src/app/mainscreen/sidenav/sidenav.component.html
@@ -36,7 +36,7 @@
                     (click)="channelFirebaseService.selectChannel(channel.id)"
                     [class.myChannels-channel-selected]="channelFirebaseService.getSelectedChannelID()===channel.id">
                     <h2 class="myChannels-channel-icon">#</h2>
-                    <h3 class="myChannels-channel-name" >{{ channel.channelName }}</h3>
+                    <h3 class="myChannels-channel-name" >{{ formatService.cutStrLen(channel.channelName) }}</h3>
                 </div>
             </div>
 
