--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -11,7 +11,7 @@
         </app-searchbar>
     </div>
     <div id="header-user">
-        <h1 id="header-user-name">{{user.fullName}}</h1>
+        <h1 id="header-user-name">{{formatService.cutStrLen(user.fullName)}}</h1>
         <div *ngIf="user.avatar!=''" id="header-user-icon">
             <img src="{{user.avatar}}" alt="UserIcon">
             <div id="header-status"></div>
