--- a/src/app/mainscreen/channel/edit-channel/edit-channel.component.html
+++ b/src/app/mainscreen/channel/edit-channel/edit-channel.component.html
@@ -1,38 +1,48 @@
 <div id="edit-channel">
     <div id="edit-channel-header">
-        <h2># {{ channel.channelName }}</h2>
-        <img src="assets/img/icons/close.svg" alt="close" (click)="close()">
+        
+        <h2><b>#</b>{{ channel.channelName }}</h2>
+        <div class="closeIcon-container" (click)="close()">
+        <svg id="closeIcon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" alt="close">
+            <mask id="mask0_453_12989" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24" height="24">
+                <rect width="24" height="24" fill="#D9D9D9"/>
+            </mask>
+            <g mask="url(#mask0_453_12989)">
+                <path d="M11.9998 13.3998L7.0998 18.2998C6.91647 18.4831 6.68314 18.5748 6.3998 18.5748C6.11647 18.5748 5.88314 18.4831 5.6998 18.2998C5.51647 18.1165 5.4248 17.8831 5.4248 17.5998C5.4248 17.3165 5.51647 17.0831 5.6998 16.8998L10.5998 11.9998L5.6998 7.0998C5.51647 6.91647 5.4248 6.68314 5.4248 6.3998C5.4248 6.11647 5.51647 5.88314 5.6998 5.6998C5.88314 5.51647 6.11647 5.4248 6.3998 5.4248C6.68314 5.4248 6.91647 5.51647 7.0998 5.6998L11.9998 10.5998L16.8998 5.6998C17.0831 5.51647 17.3165 5.4248 17.5998 5.4248C17.8831 5.4248 18.1165 5.51647 18.2998 5.6998C18.4831 5.88314 18.5748 6.11647 18.5748 6.3998C18.5748 6.68314 18.4831 6.91647 18.2998 7.0998L13.3998 11.9998L18.2998 16.8998C18.4831 17.0831 18.5748 17.3165 18.5748 17.5998C18.5748 17.8831 18.4831 18.1165 18.2998 18.2998C18.1165 18.4831 17.8831 18.5748 17.5998 18.5748C17.3165 18.5748 17.0831 18.4831 16.8998 18.2998L11.9998 13.3998Z" fill="black"/>
+            </g>
+        </svg>
+        </div>
     </div>
 
     <div id="edit-channel-name-container-viewMode" *ngIf="!editChannelName">
         <div class="dsp-flex-row-spaceBtwn">
-            <h3>Channel Name</h3>
-            <a (click)="editChannelName = !editChannelName">bearbeiten</a>
+            <h3>Channel-Name</h3>
+            <a (click)="editChannelName = !editChannelName">Bearbeiten</a>
         </div>
-        <h2># {{ channel.channelName }}</h2>
+        <p><b>#</b> {{ channel.channelName }}</p>
     </div>
     <div id="edit-channel-name-container-editMode" *ngIf="editChannelName">
         <div class="dsp-flex-row-spaceBtwn">
-            <h3>Channel Name</h3>
+            <h3>Channel-Name</h3>
             <a (click)="saveChannelName()">Speichern</a>
         </div>
         <div id="edit-channel-name-container-editMode-input">
             <input id="edit-channel-name-input" type="text" [(ngModel)]="NewChannelName">
            <div id="edit-channel-name-container-editMode-input-icon">
-                <h2>#</h2>
+                <b>#</b>
            </div>
         </div>
     </div>
     <div id="edit-channel-description-container-viewMode"  *ngIf="!editChannelDescription">
         <div class="dsp-flex-row-spaceBtwn">
             <h3>Beschreibung</h3>
-            <a (click)="editChannelDescription = !editChannelDescription">bearbeiten</a>
+            <a (click)="editChannelDescription = !editChannelDescription">Bearbeiten</a>
         </div>
-        <h2>{{channel.channelDescription}}</h2>
+        <p>{{channel.channelDescription}}</p>
         <div class="divider-container">
             <div class="divider"></div>
         </div>
-        <div>
+        <div id="edit-channel-creator-description">
             <h3>Erstellt von</h3>
             <h2>{{channelCreatorName}}</h2>
         </div>
