--- a/src/app/mainscreen/channel/edit-channel/edit-channel.component.scss
+++ b/src/app/mainscreen/channel/edit-channel/edit-channel.component.scss
@@ -9,21 +9,59 @@
     left: 30px;
     z-index: 15;
     box-shadow: 0px 6px 10px 0px #00000033;
-    padding: 0px 12px 12px 12px;
+    padding: 30px;
     gap:18px; 
     display: flex;
     flex-direction: column;
     word-break: break-all;
+    
 
     #edit-channel-header{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
+        gap:20px;
 
-        img{
-            cursor: pointer;
+        h2{
+            margin: 0px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        b{
+            font-size: 30px;
         }
     }
+
+    .closeIcon-container{
+        padding: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 30px;
+        cursor: pointer;
+        min-width: 30px;
+        min-height: 30px;
+
+        &:hover{
+            background-color: #ECEEFE; 
+        }
+
+        #closeIcon:hover path {
+            fill: #535AF1; 
+            }
+
+        #closeIcon{
+            width: 24px;
+            height: 24px;
+        }
+    }
+
+   
+   
+    
 
     #edit-channel-name-container-viewMode{
         border: 1px solid #ADB0D9; 
@@ -33,7 +71,23 @@
             color: #535AF1;
             text-decoration: unset;
             cursor: pointer;
+
+            &:hover{
+                font-weight: bold;
+            }
         }
+
+        b{
+            font-size: 24px;
+        }
+
+        p{
+            font-size: 18px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
         h3{
             margin: 0px;
         }
@@ -59,8 +113,9 @@
             }
             #edit-channel-name-container-editMode-input-icon{
                 position: absolute;
-                top: -7px;
-                left: 24px;
+                top: 10px;
+                left: 25px;
+                font-size: 28px;
             }
         }
     }
@@ -73,9 +128,16 @@
             color: #535AF1;
             text-decoration: unset;
             cursor: pointer;
+
+            &:hover{
+                font-weight: bold;
+            }
         }
         h3{
             margin: 0px;
+        }
+        p{
+            font-size: 18px;
         }
     }
 
@@ -115,7 +177,19 @@
             border: 0px;
             font-size: 1em;
             cursor: pointer;
+
+
+            &:hover {
+                background-color: rgba(121, 126, 243, 1) !important;
+                transition: background-color 0.15s ease-in-out;
+              }
         }
+    }
+}
+
+#edit-channel-creator-description{
+    h2{
+        color:rgba(83, 90, 241, 1);
     }
 }
 
