--- a/src/app/mainscreen/sidenav/sidenav.component.scss
+++ b/src/app/mainscreen/sidenav/sidenav.component.scss
@@ -98,6 +98,7 @@
     justify-content: center;
     flex-direction: column;
     gap:6px;
+    cursor: pointer;
     word-break: break-word;
 
     .myChannels-channel{
