--- a/src/app/mainscreen/user-profil/user-profil.component.scss
+++ b/src/app/mainscreen/user-profil/user-profil.component.scss
@@ -24,6 +24,7 @@
         #headerUserProfil-header {
             display: flex;
             justify-content: space-between;
+            align-items: center;
         }
 
         #headerUserProfil-image-container {
