--- a/src/app/mainscreen/message/message.component.scss
+++ b/src/app/mainscreen/message/message.component.scss
@@ -4,7 +4,7 @@
     justify-content: flex-end;
     align-items: flex-start;
     position: relative;
-    padding: 0 45px 0 45px;
+    padding: 10px 45px 10px 45px;
 
     .message-img {
         width: 70px;
