--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,6 +94,29 @@ button{
     }
 }
 
+.closeIcon-container{
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    cursor: pointer;
+    min-width: 30px;
+    min-height: 30px;
+
+    &:hover{
+        background-color: #ECEEFE; 
+        #closeIcon path {
+            fill: #535AF1; 
+            }
+    }
+
+    #closeIcon{
+        width: 24px;
+        height: 24px;
+    }
+}
+
 
 .highlighted {
     background-color: yellow;
