--- a/src/app/mainscreen/channel/show-channel-users/show-channel-users.component.scss
+++ b/src/app/mainscreen/channel/show-channel-users/show-channel-users.component.scss
@@ -56,3 +56,14 @@
     height: 32px;
     aspect-ratio: 1;
 }
+
+@media only screen and (max-width: 768px) {
+
+    #showChannel{
+        max-width: unset;
+        min-width: unset; 
+        width: calc(100vw - 48px);
+        padding: 0px 24px 24px 24px; 
+        right: 0px; 
+    }
+}
