--- a/src/app/mainscreen/message/message.component.scss
+++ b/src/app/mainscreen/message/message.component.scss
@@ -175,5 +175,18 @@
             }
         }
     }
+}
 
+@media only screen and (max-width: 768px) {
+
+    .message-container {
+
+        width: calc(100% - 40px);
+        padding: 10px 20px 10px 20px;
+    
+        .message-img {
+            width: 50px;
+            height: 50px;
+        }
+    }
 }
