--- a/src/app/mainscreen/sidenav/chat-view/chat-view.component.scss
+++ b/src/app/mainscreen/sidenav/chat-view/chat-view.component.scss
@@ -20,8 +20,10 @@
     }
 
     .avatar0 {
+        height: 50px;
         width: 50px;
         border-radius: 50%;
+        object-fit: cover;
     }
     #header-user-icon {
         position: relative;
