--- a/src/app/mainscreen/user-profil/user-profil.component.html
+++ b/src/app/mainscreen/user-profil/user-profil.component.html
@@ -23,7 +23,7 @@
                     <h2>{{user.fullName}}</h2>
                 </div>
                 <div>
-                    <a *ngIf="isCurrentUser" (click)="editUserMode=true">bearbeiten</a>
+                    <a *ngIf="isCurrentUser" (click)="editUserMode=true">Bearbeiten</a>
                 </div>
             </div>
             <div id="status" [class.col-red]="user.status === 'offline'" [class.col-green]="user.status === 'online'"
@@ -34,7 +34,7 @@
             <div id="headerUserProfil-email">
                 <div id="headerUserProfil-email-header">
                     <img src="assets/img/icons/mailblack.svg" alt="mail">
-                    <h4>E-mail-Adresse</h4>
+                    <h4>E-Mail-Adresse</h4>
                 </div>
                 <div  id="headerUserProfil-email-address">
                     <a href="mailto:{{user.mail}}">{{user.mail}}</a>
