--- a/src/app/mainscreen/chat/chat.component.html
+++ b/src/app/mainscreen/chat/chat.component.html
@@ -34,7 +34,7 @@
                     <img src="{{chatPartner.avatar}}">
                     <div></div>
                     <h3>{{ chatPartner.fullName }}</h3>
-                    <h3>&nbsp;(Du)</h3>
+                    <h3 *ngIf="chatPartner.id == userFirebaseService.currentUser.id">&nbsp;(Du)</h3>
                 </div>
                 <div class="user-text">
                     <div *ngIf="chatPartner.id != userFirebaseService.currentUser.id">
